(v2) More about removing WST deps.